--- a/README.textile
+++ b/README.textile
@@ -38,6 +38,12 @@ bc.. /opt/activator-1.3.2-minimal/activator run
 
 p. Go to http://localhost:9000/tools/etikett
 
+h2. Editing and Uploading
+
+To edit/delete/upload data password authentification is required. Default user is admin. Default password is admin. To change the default password edit the application.conf:
+
+bc..  etikett.admin-password="admin"
+
 h2. Manual Test
 
 List all
