Add new /convert endpoint and basic multilingual support - Under /tools/etikett/convert an on-the-fly conversion of turtle to labels.json is provided. The form sends a form encoded POST to /convert. The form encoded data must contain the following parameters: file, format, language. - The etikett model has been updated and added with two fields: 'multilangLabel' is only visible for json generators but is not stored in the database. 'multiLangSerialized' is a String representation of the multilangLabel map. It is stored in the database and is not visible for json generators. - a new optional parameter 'lang' has been added to the '/' endpoint. It takes effect, if the parameter 'column=label' is present. The service accepts language codes and tries to return the proper label from the languageMap

--- a/README.textile
+++ b/README.textile
@@ -86,14 +86,14 @@ bc.. sudo update-rc.d etikett defaults 99 20
 p. Create/Configure Mysql Table
 
 bc.. mysql -u root -p
-CREATE DATABASE etikett_test;
-CREATE USER 'etikett_test'@'localhost' IDENTIFIED BY 'etikett_test';
-GRANT ALL ON etikett_test.* TO 'etikett_test'@'localhost';
+CREATE DATABASE etikett  DEFAULT CHARACTER SET utf8 DEFAULT COLLATE utf8_general_ci;
+CREATE USER 'etikett'@'localhost' IDENTIFIED BY 'etikett';
+GRANT ALL ON etikett.* TO 'etikett'@'localhost';
 
 p. Set /opt/etikett/conf/application.conf
 
 bc.. db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost/etikett"
+db.default.url="jdbc:mysql://localhost/etikett?characterEncoding=UTF-8"
 db.default.user=etikett_test
 db.default.password="etikett_test"
 
